--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,14 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[package.scripts]
-dev = "cargo watch -x 'run'"
+[workspace]
+members = [".", "entity", "migration"]
+
+
 
 [dependencies]
+entity = { path = "entity" }
+migration = { path = "migration" }
 actix-web = "4.4.1"
 serde = { version = "1.0.195", features = ["derive"] }
 dotenv = "0.15.0"
@@ -24,6 +28,7 @@ futures = "0.3.30"
 chrono = "0.4.32"
 uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
 sea-orm = { version = "^0.12.12", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
+once_cell = "1.19.0"
 
 
 [dev-dependencies]
