--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "collabs-code-backend"
+name = "cc_server"
 version = "0.1.0"
 edition = "2021"
 
@@ -29,6 +29,7 @@ chrono = "0.4.32"
 uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
 sea-orm = { version = "^0.12.12", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
 once_cell = "1.19.0"
+
 
 
 [dev-dependencies]
