--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -14,4 +14,5 @@ async-std = { version = "1", features = ["attributes", "tokio1"] }
 
 [dependencies.sea-orm]
 version = "0.12.12"
+features = ["debug-print"]
 
