--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "cc_server"
 version = "0.1.0"
 edition = "2021"
+authors = ["Divesh", "Ajay"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -29,6 +30,9 @@ chrono = "0.4.32"
 uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
 sea-orm = { version = "^0.12.12", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
 once_cell = "1.19.0"
+url = "2.5.0"
+openidconnect = "3.4.0"
+oauth2 = "4.4.2"
 
 
 
