--- a/migration/Cargo.toml
+++ b/migration/Cargo.toml
@@ -10,6 +10,7 @@ path = "src/lib.rs"
 
 [dependencies]
 async-std = { version = "1", features = ["attributes", "tokio1"] }
+uuid = {version = "1.7.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
 
 [dependencies.sea-orm-migration]
 version = "0.12.12"
