--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
     "rust-analyzer.linkedProjects": [
         ".\\migration\\Cargo.toml",
         ".\\entity\\Cargo.toml",
+        ".\\Cargo.toml"
     ]
 }
